--- a/css/stars.css
+++ b/css/stars.css
@@ -21,10 +21,7 @@ header h2{
     width: 80%;
     text-align: center;
 }
-header a, a:visited {
-    text-decoration:none;
-    color:#fcfcfc;
-}
+
 
 @keyframes move-twink-back {
     from {background-position:0 0;}
